--- a/studio.config.json
+++ b/studio.config.json
@@ -1,19 +1,26 @@
 {
-  "packages": {
-    "dir": "",
-    "menu": [
-      [
-        "TOKENS",
-        ["tokens"]
-      ],
-      [
-        "COMPONENTS",
-        []
-      ],
-      [
-        "INFRASTRUCTURE",
-        ["sd-input"]
-      ]
+ "packages": {
+  "dir": "",
+  "menu": [
+   [
+    "TOKENS",
+    [
+     "tokens"
     ]
-  }
+   ],
+   [
+    "COMPONENTS",
+    [
+     "button-comp",
+     "button"
+    ]
+   ],
+   [
+    "INFRASTRUCTURE",
+    [
+     "sd-input"
+    ]
+   ]
+  ]
+ }
 }
