--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -22,8 +22,8 @@ jobs:
         run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
       - name: Run style-dictionary
-        run: node build.js
-
+        run: npx style-dictionary build --config sd.config.cjs
+        
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
