--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "token-transformer": "^0.0.27",
-    "style-dictionary": "^3.7.1"
+    "style-dictionary": "^3.7.1",
+    "@divriots/dockit-core": "^0.9.4",
+    "lit": "^2.2.2"
   },
   "dependencies": {}
 }
