add check and radios, and fields

--- a/studio.config.json
+++ b/studio.config.json
@@ -15,8 +15,16 @@
     [
      "button-comp",
      "button",
-     "Fields",
-     "typography"
+     "fields",
+     "typography",
+     "field"
+    ]
+   ],
+   [
+    "Forms",
+    [
+     "select",
+     "checks-radios"
     ]
    ],
    [
