--- a/studio.config.json
+++ b/studio.config.json
@@ -6,6 +6,7 @@
         "TOKENS",
         [
           "tokens",
+          "typography",
           "colors",
           "size"
         ]
@@ -18,6 +19,7 @@
           "breadcrumb",
           "cards",
           "carousel",
+          "dropdown",
           "field",
           "navs-tabs",
           "navbar",
