Add : -Footer -Overflow -Accordion -Flex -Display
Modified:
-Breadcrumb
-Button
-Cards
-Carousel
-Check-radios
and many more

--- a/studio.config.json
+++ b/studio.config.json
@@ -1,53 +1,59 @@
 {
-  "packages": {
-    "dir": "",
-    "menu": [
-      [
-        "TOKENS",
-        [
-          "tokens",
-          "typography",
-          "colors",
-          "size"
-        ]
-      ],
-      [
-        "COMPONENTS",
-        [
-          "button-comp",
-          "button",
-          "breadcrumb",
-          "cards",
-          "carousel",
-          "dropdown",
-          "field",
-          "navs-tabs",
-          "navbar",
-          "pagination",
-          "tags"
-        ]
-      ],
-      [
-        "Forms",
-        [
-          "select",
-          "checks-radios",
-          "input-group"
-        ]
-      ],
-      [
-        "Utilities",
-        [
-          "shadows"
-        ]
-      ],
-      [
-        "INFRASTRUCTURE",
-        [
-          "sd-input",
-          "doc-layout"
-        ]
-      ]
+ "packages": {
+  "dir": "",
+  "menu": [
+   [
+    "TOKENS",
+    [
+     "tokens",
+     "typography",
+     "colors",
+     "size"
     ]
-  }
+   ],
+   [
+    "COMPONENTS",
+    [
+     "button-comp",
+     "button",
+     "breadcrumb",
+     "cards",
+     "carousel",
+     "dropdown",
+     "field",
+     "footer",
+     "navs-tabs",
+     "navbar",
+     "pagination",
+     "tags",
+     "accordion",
+     "topbar"
+    ]
+   ],
+   [
+    "Forms",
+    [
+     "select",
+     "checks-radios",
+     "input-group"
+    ]
+   ],
+   [
+    "Utilities",
+    [
+     "shadows",
+     "flex",
+     "display",
+     "overflow"
+    ]
+   ],
+   [
+    "INFRASTRUCTURE",
+    [
+     "sd-input",
+     "doc-layout"
+    ]
+   ]
+  ]
+ }
 }
