Modified : -Accordion -Button -Carousel -Checks and radios -Colors -Field -Tags -Tokens -Typography
Add:
- Table
- Instalation

--- a/studio.config.json
+++ b/studio.config.json
@@ -8,7 +8,8 @@
      "tokens",
      "typography",
      "colors",
-     "size"
+     "size",
+     "INSTALLATION"
     ]
    ],
    [
@@ -27,7 +28,8 @@
      "pagination",
      "tags",
      "accordion",
-     "topbar"
+     "topbar",
+     "table"
     ]
    ],
    [
