Push from patch011

--- a/studio.config.json
+++ b/studio.config.json
@@ -1,61 +1,61 @@
 {
- "packages": {
-  "dir": "",
-  "menu": [
-   [
-    "TOKENS",
-    [
-     "tokens",
-     "typography",
-     "colors",
-     "size",
-     "INSTALLATION"
+  "packages": {
+    "dir": "",
+    "menu": [
+      [
+        "TOKENS",
+        [
+          "INSTALLATION",
+          "colors",
+          "tokens",
+          "typography",
+          "size"
+        ]
+      ],
+      [
+        "COMPONENTS",
+        [
+          "accordion",
+          "button-comp",
+          "button",
+          "breadcrumb",
+          "cards",
+          "carousel",
+          "dropdown",
+          "field",
+          "footer",
+          "navs-tabs",
+          "navbar",
+          "pagination",
+          "table",
+          "tags",
+          "topbar"
+        ]
+      ],
+      [
+        "Forms",
+        [
+          "select",
+          "checks-radios",
+          "input-group"
+        ]
+      ],
+      [
+        "Utilities",
+        [
+          "display",
+          "flex",
+          "overflow",
+          "shadows"
+        ]
+      ],
+      [
+        "INFRASTRUCTURE",
+        [
+          "sd-input",
+          "doc-layout"
+        ]
+      ]
     ]
-   ],
-   [
-    "COMPONENTS",
-    [
-     "button-comp",
-     "button",
-     "breadcrumb",
-     "cards",
-     "carousel",
-     "dropdown",
-     "field",
-     "footer",
-     "navs-tabs",
-     "navbar",
-     "pagination",
-     "tags",
-     "accordion",
-     "topbar",
-     "table"
-    ]
-   ],
-   [
-    "Forms",
-    [
-     "select",
-     "checks-radios",
-     "input-group"
-    ]
-   ],
-   [
-    "Utilities",
-    [
-     "shadows",
-     "flex",
-     "display",
-     "overflow"
-    ]
-   ],
-   [
-    "INFRASTRUCTURE",
-    [
-     "sd-input",
-     "doc-layout"
-    ]
-   ]
-  ]
- }
+  }
 }
