fix .prefix and .suffix

--- a/studio.config.json
+++ b/studio.config.json
@@ -1,61 +1,68 @@
 {
-  "packages": {
-    "dir": "",
-    "menu": [
-      [
-        "TOKENS",
-        [
-          "INSTALLATION",
-          "colors",
-          "tokens",
-          "typography",
-          "size"
-        ]
-      ],
-      [
-        "COMPONENTS",
-        [
-          "accordion",
-          "button-comp",
-          "button",
-          "breadcrumb",
-          "cards",
-          "carousel",
-          "dropdown",
-          "field",
-          "footer",
-          "navs-tabs",
-          "navbar",
-          "pagination",
-          "table",
-          "tags",
-          "topbar"
-        ]
-      ],
-      [
-        "Forms",
-        [
-          "select",
-          "checks-radios",
-          "input-group"
-        ]
-      ],
-      [
-        "Utilities",
-        [
-          "display",
-          "flex",
-          "overflow",
-          "shadows"
-        ]
-      ],
-      [
-        "INFRASTRUCTURE",
-        [
-          "sd-input",
-          "doc-layout"
-        ]
-      ]
+ "packages": {
+  "dir": "",
+  "menu": [
+   [
+    "TOKENS",
+    [
+     "INSTALLATION",
+     "colors",
+     "tokens",
+     "typography",
+     "size",
+     "definition"
     ]
-  }
+   ],
+   [
+    "COMPONENTS",
+    [
+     "accordion",
+     "button-comp",
+     "button",
+     "breadcrumb",
+     "cards",
+     "carousel",
+     "dropdown",
+     "field",
+     "footer",
+     "navs-tabs",
+     "navbar",
+     "pagination",
+     "table",
+     "tags",
+     "topbar"
+    ]
+   ],
+   [
+    "Forms",
+    [
+     "select",
+     "checks-radios",
+     "input-group"
+    ]
+   ],
+   [
+    "Utilities",
+    [
+     "display",
+     "flex",
+     "overflow",
+     "shadows"
+    ]
+   ],
+   [
+    "INFRASTRUCTURE",
+    [
+     "sd-input",
+     "doc-layout"
+    ]
+   ]
+  ]
+ },
+ "dependencies": {
+  "autoInstall": false
+ },
+ "doc": {
+  "markdownEngine": "mdjs"
+ }
 }
