--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@backlight-dev/ragged-fiction-fhfxu.blank-l9wkeayq",
   "version": "0.1.2",
+  "author": {
+    "name": "Senno Adi"
+  },
   "description": "",
   "license": "MIT",
   "type": "module",
