--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Run token-transformer
-        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font --resolveReferences true --expandTypography=true
+        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
       - name: Run style-dictionary
         run: npx style-dictionary build --config sd.config.cjs
