--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -18,6 +18,5 @@ jobs:
           destination_branch: 'main' # match your default branch
           pr_title: 'Figma Tokens Update'
           pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-          github_token: ${{ secrets.GH_PAT }}
-          # github_token: ${{ secrets.GITHUB_TOKEN }}
-          # github_token: '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'
+          # github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
