--- a/.github/workflows/figma-tokens-convert-sd.yaml
+++ b/.github/workflows/figma-tokens-convert-sd.yaml
@@ -33,15 +33,32 @@ jobs:
           add: '.'
 
       - name: Get Current Version
-        id: get_version
         run: |
           current_version=$(jq -r .version package.json)
-          echo "::set-output name=current_version::$current_version"
+          new_revision=$((version_parts[2] + 1))
+          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+          echo "::set-output name=new_version::$new_version"
+        id: version
 
-      - name: Create Version Tag
-        if: ${{ steps.get_version.outputs.current_version != '' }}
-        run: |
-          current_version="${{ steps.get_version.outputs.current_version }}"
-          new_version="${{ github.run_number }}"
-          git tag -a "v$new_version" -m "Version $new_version"
-          git push origin "v$new_version"
+      # - name: Create Version Tag
+      #   run: |
+      #     git config user.name "GitHub Actions"
+      #     git config user.email "actions@github.com"
+      #     git tag -a "v${{ steps.version.outputs.new_version }}" -m "Versi ${{ steps.version.outputs.new_version }}"
+      #     git push origin "v${{ steps.version.outputs.new_version }}"
+
+      ######
+
+      # - name: Get Current Version
+      #   id: get_version
+      #   run: |
+      #     current_version=$(jq -r .version package.json)
+      #     echo "::set-output name=current_version::$current_version"
+
+      # - name: Create Version Tag
+      #   if: ${{ steps.get_version.outputs.current_version != '' }}
+      #   run: |
+      #     current_version="${{ steps.get_version.outputs.current_version }}"
+      #     new_version="${{ github.run_number }}"
+      #     git tag -a "v$new_version" -m "Version $new_version"
+      #     git push origin "v$new_version"
