--- a/.github/workflows/figma-tokens-convert-sd.yaml
+++ b/.github/workflows/figma-tokens-convert-sd.yaml
@@ -38,6 +38,13 @@ jobs:
           current_version=$(jq -r .version package.json)
           echo "Current Version: $current_version"
 
+      - name: Create Version Tag
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git tag -a "v${{ steps.version.outputs.new_version }}" -m "Versi ${{ steps.version.outputs.new_version }}"
+          git push origin "v${{ steps.version.outputs.new_version }}"
+
       # - name: Get Current Version
       #   run: |
       #     current_version=$(jq -r .version package.json)
