--- a/.github/workflows/figma-tokens-convert-sd.yaml
+++ b/.github/workflows/figma-tokens-convert-sd.yaml
@@ -42,8 +42,16 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git tag -a "v${{ steps.version.outputs.new_version }}" -m "Versi ${{ steps.version.outputs.new_version }}"
-          git push origin "v${{ steps.version.outputs.new_version }}"
+          new_version="${{ steps.version.outputs.new_version }}"
+          echo "New Version : $new_version"
+
+      # - name: Create Version Tag
+      #   run: |
+      #     git config user.name "GitHub Actions"
+      #     git config user.email "actions@github.com"
+      #     new_version="${{ steps.version.outputs.new_version }}"
+      #     git tag -a "v${{ steps.version.outputs.new_version }}" -m "Versi ${{ steps.version.outputs.new_version }}"
+      #     git push origin "v${{ steps.version.outputs.new_version }}"
 
       # - name: Get Current Version
       #   run: |
