--- a/.github/workflows/figma-tokens-convert-sd.yaml
+++ b/.github/workflows/figma-tokens-convert-sd.yaml
@@ -43,6 +43,15 @@ jobs:
           echo "New Version: $new_version"
           echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
 
+      - name: Commit and Push Changes
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add package.json
+          git commit -m "Bump version to $new_version"
+          git push origin main
+        working-directory: ${{ github.workspace }}
+
       - name: Create Version Tag
         run: |
           git config user.name "GitHub Actions"
