--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -10,13 +10,18 @@ jobs:
   pull-request:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: skip process
+        run: |
+          echo "skipped"
+      # - uses: actions/checkout@v2
 
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
-        with:
-          destination_branch: 'main' # match your default branch
-          pr_title: 'Figma Tokens Update'
-          pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-          # github_token: ${{ secrets.GH_PAT }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      ## for some reason it didnt work, fixing soon
+
+      # - name: Create Pull Request
+      #   uses: repo-sync/pull-request@v2
+      #   with:
+      #     destination_branch: 'main' # match your default branch
+      #     pr_title: 'Figma Tokens Update'
+      #     pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+      #     # github_token: ${{ secrets.GH_PAT }}
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
