--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -6,22 +6,8 @@ on:
       - figma-tokens
 
 jobs:
-  create-pr:
+  process-sd:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # Branch tujuan pull request
-          title: 'Figma Tokens Update'
-          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-
-  process-pr:
-    runs-on: ubuntu-latest
-    needs: create-pr
     steps:
       - uses: actions/checkout@v2
 
@@ -61,3 +47,17 @@ jobs:
           npm --no-git-tag-version version $new_version
           git add package.json
           git commit -m "chore: update package.json to version $new_version"
+
+  create-pr:
+    runs-on: ubuntu-latest
+    needs: process-sd
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main # Branch tujuan pull request
+          title: 'Figma Tokens Update'
+          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
