--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -6,8 +6,23 @@ on:
       - figma-tokens
 
 jobs:
+  create-pr:
+    runs-on: ubuntu-latest
+    # needs: process-sd
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main # Branch tujuan pull request
+          title: 'Figma Tokens Update'
+          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
   process-sd:
     runs-on: ubuntu-latest
+    needs: create-pr
     steps:
       - uses: actions/checkout@v2
 
@@ -48,17 +63,17 @@ jobs:
           git add package.json
           git commit -m "chore: update package.json to version $new_version"
 
-  create-pr:
-    runs-on: ubuntu-latest
-    needs: process-sd
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+#   create-pr:
+#     runs-on: ubuntu-latest
+#     needs: process-sd
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # Branch tujuan pull request
-          title: 'Figma Tokens Update'
-          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           branch: main # Branch tujuan pull request
+#           title: 'Figma Tokens Update'
+#           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
