--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   create-pr:
     runs-on: ubuntu-latest
-    # needs: process-sd
+    needs: process-sd
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
   process-sd:
     runs-on: ubuntu-latest
-    needs: create-pr
+    # needs: create-pr
     steps:
       - uses: actions/checkout@v2
 
@@ -62,18 +62,3 @@ jobs:
           npm --no-git-tag-version version $new_version
           git add package.json
           git commit -m "chore: update package.json to version $new_version"
-
-#   create-pr:
-#     runs-on: ubuntu-latest
-#     needs: process-sd
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: Create Pull Request
-#         uses: peter-evans/create-pull-request@v3
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           branch: main # Branch tujuan pull request
-#           title: 'Figma Tokens Update'
-#           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
