--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -6,28 +6,28 @@ on:
       - figma-tokens
 
 jobs:
-  create-pr:
-    runs-on: ubuntu-latest
-    needs: process-sd
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  #   create-pr:
+  #     runs-on: ubuntu-latest
+  #     needs: process-sd
+  #     steps:
+  #       - name: Checkout code
+  #         uses: actions/checkout@v2
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # Branch tujuan pull request
-          title: 'Figma Tokens Update'
-          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+  #       - name: Create Pull Request
+  #         uses: peter-evans/create-pull-request@v3
+  #         with:
+  #           token: ${{ secrets.GITHUB_TOKEN }}
+  #           branch: main # Branch tujuan pull request
+  #           title: 'Figma Tokens Update'
+  #           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
 
-      - name: Merge PR (Optional)
-        if: success() # Hanya merge jika PR berhasil dibuat
-        run: |
-          # Mengganti branch 'main' dengan branch 'figma-tokens'
-          git checkout main
-          git merge --no-ff ${{ github.event.head_ref }} -m "Merge branch 'figma-tokens' into main"
-          git push origin main
+  #       - name: Merge PR (Optional)
+  #         if: success() # Hanya merge jika PR berhasil dibuat
+  #         run: |
+  #           # Mengganti branch 'main' dengan branch 'figma-tokens'
+  #           git checkout main
+  #           git merge --no-ff ${{ github.event.head_ref }} -m "Merge branch 'figma-tokens' into main"
+  #           git push origin main
   process-sd:
     runs-on: ubuntu-latest
     # needs: create-pr
