--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -6,6 +6,63 @@ on:
       - figma-tokens
 
 jobs:
+  process-sd:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run token-transformer
+        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
+
+      - name: Run style-dictionary
+        run: npx style-dictionary build --config sd.config.cjs
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: Senno Adi (Robot style dictionary converter)
+          author_email: example@gmail.com
+          message: 'chore: style-dictionary output'
+          add: '.'
+
+  create-pr:
+    runs-on: ubuntu-latest
+    needs: process-sd
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main # Branch tujuan pull request
+          title: 'Figma Tokens Update'
+          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+    #   - name: Get Current Version and Calculate New Version
+    #     id: version
+    #     run: |
+    #       current_version=$(jq -r .version package.json)
+    #       echo "Current Version: $current_version"
+    #       IFS='.' read -ra version_parts <<< "$current_version"
+    #       new_revision=$((version_parts[2] + 1))
+    #       new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+    #       echo "New Version: $new_version"
+    #       echo "::set-output name=new_version::$new_version"
+    #       echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
+
+    #   - name: Update Version in package.json
+    #     run: |
+    #       new_version="${{ steps.version.outputs.new_version }}"
+    #       echo "Updating package.json to version $new_version"
+    #       npm --no-git-tag-version version $new_version
+    #       git add package.json
+    #       git commit -m "chore: update package.json to version $new_version"
+
   #   create-pr:
   #     runs-on: ubuntu-latest
   #     needs: process-sd
@@ -28,45 +85,3 @@ jobs:
   #           git checkout main
   #           git merge --no-ff ${{ github.event.head_ref }} -m "Merge branch 'figma-tokens' into main"
   #           git push origin main
-  process-sd:
-    runs-on: ubuntu-latest
-    # needs: create-pr
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run token-transformer
-        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
-
-      - name: Run style-dictionary
-        run: npx style-dictionary build --config sd.config.cjs
-
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: Senno Adi (Robot style dictionary converter)
-          author_email: example@gmail.com
-          message: 'chore: style-dictionary output'
-          add: '.'
-
-      - name: Get Current Version and Calculate New Version
-        id: version
-        run: |
-          current_version=$(jq -r .version package.json)
-          echo "Current Version: $current_version"
-          IFS='.' read -ra version_parts <<< "$current_version"
-          new_revision=$((version_parts[2] + 1))
-          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
-          echo "New Version: $new_version"
-          echo "::set-output name=new_version::$new_version"
-          echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
-
-      - name: Update Version in package.json
-        run: |
-          new_version="${{ steps.version.outputs.new_version }}"
-          echo "Updating package.json to version $new_version"
-          npm --no-git-tag-version version $new_version
-          git add package.json
-          git commit -m "chore: update package.json to version $new_version"
