--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -28,10 +28,6 @@ jobs:
           message: 'chore: style-dictionary output'
           add: '.'
 
-  create-pr:
-    runs-on: ubuntu-latest
-    needs: process-sd
-    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -42,6 +38,21 @@ jobs:
           branch: main # Branch tujuan pull request
           title: 'Figma Tokens Update'
           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+    #   create-pr:
+    #     runs-on: ubuntu-latest
+    #     needs: process-sd
+    #     steps:
+    #       - name: Checkout code
+    #         uses: actions/checkout@v2
+
+    #       - name: Create Pull Request
+    #         uses: peter-evans/create-pull-request@v3
+    #         with:
+    #           token: ${{ secrets.GITHUB_TOKEN }}
+    #           branch: main # Branch tujuan pull request
+    #           title: 'Figma Tokens Update'
+    #           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
 
     #   - name: Get Current Version and Calculate New Version
     #     id: version
