--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -9,34 +9,37 @@ jobs:
   pull-request:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
-        with:
-          destination_branch: 'main' # match your default branch
-          pr_title: 'Figma Tokens Update'
-          pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Wait for Pull Request to Merge
+      - name: skip process
         run: |
-          # Menggunakan polling untuk menunggu pull request digabungkan
-          sleep 10 # Mulai dengan interval polling 10 detik
-          pr_number=${{ steps.create-pull-request.outputs.pr_number }}
-          status="pending"
-          while [ "$status" != "success" ]; do
-            status=$(curl -s -X GET -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/repos/${{ github.repository }}/pulls/$pr_number" \
-              | jq -r .mergeable_state)
-            if [ "$status" = "clean" ]; then
-              echo "Pull Request telah digabungkan!"
-              break
-            elif [ "$status" = "dirty" ]; then
-              echo "Pull Request memiliki konflik."
-              exit 1
-            else
-              echo "Menunggu pull request untuk digabungkan..."
-              sleep 10 # Menggunakan interval polling 10 detik
-            fi
-          done
+          echo "skipped"
+    #   - uses: actions/checkout@v2
+
+    #   - name: Create Pull Request
+    #     uses: repo-sync/pull-request@v2
+    #     with:
+    #       destination_branch: 'main' # match your default branch
+    #       pr_title: 'Figma Tokens Update'
+    #       pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+    #       github_token: ${{ secrets.GITHUB_TOKEN }}
+
+    #   - name: Wait for Pull Request to Merge
+    #     run: |
+    #       # Menggunakan polling untuk menunggu pull request digabungkan
+    #       sleep 10 # Mulai dengan interval polling 10 detik
+    #       pr_number=${{ steps.create-pull-request.outputs.pr_number }}
+    #       status="pending"
+    #       while [ "$status" != "success" ]; do
+    #         status=$(curl -s -X GET -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+    #           "https://api.github.com/repos/${{ github.repository }}/pulls/$pr_number" \
+    #           | jq -r .mergeable_state)
+    #         if [ "$status" = "clean" ]; then
+    #           echo "Pull Request telah digabungkan!"
+    #           break
+    #         elif [ "$status" = "dirty" ]; then
+    #           echo "Pull Request memiliki konflik."
+    #           exit 1
+    #         else
+    #           echo "Menunggu pull request untuk digabungkan..."
+    #           sleep 10 # Menggunakan interval polling 10 detik
+    #         fi
+    #       done
