--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -12,6 +12,7 @@ jobs:
       - name: skip process
         run: |
           echo "skipped"
+    # steps:
     #   - uses: actions/checkout@v2
 
     #   - name: Create Pull Request
@@ -20,26 +21,95 @@ jobs:
     #       destination_branch: 'main' # match your default branch
     #       pr_title: 'Figma Tokens Update'
     #       pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-    #       github_token: ${{ secrets.GITHUB_TOKEN }}
+    #       github_token: ${{ secrets.GH_PAT }}
 
-    #   - name: Wait for Pull Request to Merge
-    #     run: |
-    #       # Menggunakan polling untuk menunggu pull request digabungkan
-    #       sleep 10 # Mulai dengan interval polling 10 detik
-    #       pr_number=${{ steps.create-pull-request.outputs.pr_number }}
-    #       status="pending"
-    #       while [ "$status" != "success" ]; do
-    #         status=$(curl -s -X GET -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-    #           "https://api.github.com/repos/${{ github.repository }}/pulls/$pr_number" \
-    #           | jq -r .mergeable_state)
-    #         if [ "$status" = "clean" ]; then
-    #           echo "Pull Request telah digabungkan!"
-    #           break
-    #         elif [ "$status" = "dirty" ]; then
-    #           echo "Pull Request memiliki konflik."
-    #           exit 1
-    #         else
-    #           echo "Menunggu pull request untuk digabungkan..."
-    #           sleep 10 # Menggunakan interval polling 10 detik
-    #         fi
-    #       done
+#   process-sd:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Run token-transformer
+#         run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
+
+#       - name: Run style-dictionary
+#         run: npx style-dictionary build --config sd.config.cjs
+
+#       - name: Commit changes
+#         uses: EndBug/add-and-commit@v9
+#         with:
+#           author_name: Senno Adi (Robot style dictionary converter)
+#           author_email: example@gmail.com
+#           message: 'chore: style-dictionary output'
+#           add: '.'
+
+#   - name: Checkout code
+#     uses: actions/checkout@v2
+
+#   - name: Create Pull Request
+#     uses: peter-evans/create-pull-request@v3
+#     with:
+#       token: ${{ secrets.GITHUB_TOKEN }}
+#       branch: main # Branch tujuan pull request
+#       title: 'Figma Tokens Update'
+#       body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+#   create-pr:
+#     runs-on: ubuntu-latest
+#     needs: process-sd
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           branch: main # Branch tujuan pull request
+#           title: 'Figma Tokens Update'
+#           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+#   - name: Get Current Version and Calculate New Version
+#     id: version
+#     run: |
+#       current_version=$(jq -r .version package.json)
+#       echo "Current Version: $current_version"
+#       IFS='.' read -ra version_parts <<< "$current_version"
+#       new_revision=$((version_parts[2] + 1))
+#       new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+#       echo "New Version: $new_version"
+#       echo "::set-output name=new_version::$new_version"
+#       echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
+
+#   - name: Update Version in package.json
+#     run: |
+#       new_version="${{ steps.version.outputs.new_version }}"
+#       echo "Updating package.json to version $new_version"
+#       npm --no-git-tag-version version $new_version
+#       git add package.json
+#       git commit -m "chore: update package.json to version $new_version"
+
+#   create-pr:
+#     runs-on: ubuntu-latest
+#     needs: process-sd
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           branch: main # Branch tujuan pull request
+#           title: 'Figma Tokens Update'
+#           body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+#       - name: Merge PR (Optional)
+#         if: success() # Hanya merge jika PR berhasil dibuat
+#         run: |
+#           # Mengganti branch 'main' dengan branch 'figma-tokens'
+#           git checkout main
+#           git merge --no-ff ${{ github.event.head_ref }} -m "Merge branch 'figma-tokens' into main"
+#           git push origin main
