--- a/.github/workflows/figma-tokens-convert-sd.yaml
+++ b/.github/workflows/figma-tokens-convert-sd.yaml
@@ -3,13 +3,28 @@ name: Process Figma Tokens Pull Request (convert to style-dictionary)
 on: pull_request
 
 jobs:
-  skip:
+  #   skip:
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - name: skip process
+  #         run: |
+  #           echo: "skipped"
+  run_if: # only if base branch is "figma-tokens"
+    if: ${{ github.head_ref == 'figma-tokens' }}
+    name: Process Figma Tokens
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
-      - name: skip process
-        run: |
-          echo: "skipped"
+      # checkout to the head of this PR
+      - uses: actions/checkout@master
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+      - name: Install Dependencies
+        run: npm install
 
+      - name: Run token-transformer
+        run: echo "token transformer running"
 # jobs:
 #   run_if: # only if base branch is "figma-tokens"
 #     if: ${{ github.head_ref == 'figma-tokens' }}
