--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -7,8 +7,22 @@ on:
       - figma-tokens
 
 jobs:
+  convert-sd:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@master
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run token-transformer
+        run: echo "token transformer running"
   pull-request:
     runs-on: ubuntu-latest
+    needs: convert-sd
     steps:
       # - name: skip process
       #   run: |
