--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -22,13 +22,13 @@ jobs:
         run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
       - name: Run style-dictionary
-        run: echo "style-dictionary running"
+        run: npx style-dictionary build --config sd.config.cjs
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: Example
-          author_email: example@gmail.com
+          author_name: senno adi
+          author_email: senno.adi2509@@gmail.com
           message: 'chore: style-dictionary output'
           add: '.'
 
