--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -49,8 +49,8 @@ jobs:
       - name: Install jq
         run: sudo apt-get install jq
 
-      - name: Pull latest changes from main
-        run: git pull origin main
+      #   - name: Pull latest changes from main
+      #     run: git pull origin main
 
       - name: Auto-increment Version Tag on Merge
         run: |
